Fix overlapping words - remove key prop and set width to 130px

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -63,7 +63,7 @@ body {
 
 .flip-container {
   display: inline-block;
-  width: 140px;
+  width: 130px;
   height: 1.2em;
   vertical-align: bottom;
   text-align: center;
